fix: crm and schedule